# fakeLisp

./: .clang-format  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  IDEAOFBYTECODE.md  INFOMATION.md  LICENSE  Makefile  README.md  README_ZH.md  SOMEIDEA.md  demo1.fkl  demo2.fkl  fake.h  fakeLisp.c  fkl.vim  functionAndForm.c  lisp.g  numAndString.c
3rd/argtable3/: CMakeLists.txt
3rd/replxx/: CMakeLists.txt
3rd/replxx/src/: conversion.cxx  conversion.hxx  terminal.cxx  unicodestring.hxx
bdb/: bdb.c  bdb.h  bdbcg.c  bp.c  eval.c  int.c  main.c
cont/: cont.c  cont.h  main.c
examples/: ascii-art.fkl  bf.fkl  bigloop.fkl  brainFuck.fkl  demo1.fkl  demo2.fkl  demo3.fkl  demo4.fkl  ffidemo.fkl  fib.fkl  genCardFace.fkl  hello.fkl  internationale.fkl  macro.fkl  minesweep.fkl  module.fkl  multiThread.fkl  readerMacro.fkl  simple_oop.fkl  simple_oos.fkl  test-loc.fkl  yinYang.fkl  yinYangPuzzle.fkl
ffi/: deftype.c  deftype.h  ffi.c  ffidll.c  ffidll.h  ffitype.c  fklffi.c  fklffi.h  fklffidll.c  fklffidll.h  fklffimem.c  fklffimem.h  fklffitype.c  fklffitype.h
fklc/: fbc.c  fbc.h  fklc.c  flnt.h  fsym.c  fsym.h
ftplugin/: fkl.vim
fuv/: dir.c  fuv.c  fuv.h  handle.c  loop.c  main.c  req.c  timer.h
include/fakeLisp/: VMtool.h  ast.h  base.h  basicADT.h  bigint.h  builtin.h  bytecode.h  cb_helper.h  code_builder.h  code_lw.h  codegen.h  common.h  compiler.h  config.h  deftype.h  dis.h  fakeFFI.h  fakeVM.h  fakedef.h  fklni.h  grammer.h  hash.h  ins_helper.h  lexer.h  mem.h  nast.h  ncompiler.h  opcode.h  optimizer.h  parser.h  parser_grammer.h  pattern.h  queue.h  reader.h  readline.h  regex.h  str_buf.h  string_table.h  symbol.h  syntax.h  (+15 more)
include/fakeLisp/cont/: config.h  hash.h  queue.h  vector.h
lib/: btk.fkl  cont.fkl  ffi.fkl  fklc.fkl  iter.fkl  json.fkl  queue.fkl  stack.fkl  std.fkl  utils.fkl
lib/fdb/: _cmd.fkl  cmd.fkl  main.fkl
lib/utils/: f.fkl  m.fkl  main.fkl
main/: bdb.c  bin2h.c  debug.c  fakeLisp.c  fakeLispc.c  fakeLispp.c  fs.c  fuv-header.c  grammer.c  hash-table.c  ht.c  int.c  math.c  os.c  psssize.c  sync.c
main/bdb/: main.c
main/grammer/: action.c  grammer.c  vmaction.c
main/test/: bi.c  dll.c  dns.c  fs_event.c  grammer.c  ins.c  lexer.c  lexer2.c  parser.c  regex.c
main/tests/: bi.c  dll.c  dns.c  fs_event.c  grammer.c  ins.c  lexer.c  lexer2.c  lexer3.c  lexer4.c  lexer5.c  parser-grammer.c  parser.c  regex.c
src/: .compiler.c.un~  .fakeVM.c.un~  .fakeVM.h.un~  .fakedef.h.un~  .pretreatment.c.un~  VMtool.c  VMtool.h  ast.c  ast.h  base.c  basicADT.c  bigint.c  btk.c  builtin.c  builtin_foreach.h  bytecode.c  cgutils.c  code_lw.c  codegen.c  codegen.h  common.c  common.h  compiler.c  compiler.h  deftype.c  deftype.h  dis.c  executable.h  execute.c  execute.h  fake.c  fake.c~  fake.h  fake.h~  fakeDef.h  fakeFFI.c  fakeFFI.h  fakeLisp.c  fakeLisp.h  fakeLispc.c  (+64 more)
src/bdb/: bdb.c  bdb.h  bp.c  eval.c  int.c  main.c
src/buf/: buf.c
src/bvec/: bvec.c
src/dvec/: dvec.c
src/fake/: fake.c  fake.h
src/fakeLisp/: fakeLisp.c  fakeLisp.h
src/form/: form.c  form.h
src/fs/: fs.c
src/fuv/: dir.c  fuv.c  fuv.h  handle.c  loop.c  main.c  req.c
src/grammer/: action.c  action.h  vmaction.c
src/ht/: ht.c
src/math/: math.c
src/os/: os.c
src/pretreatment/: pretreatment.c  pretreatment.h
src/sync/: sync.c
src/tool/: tool.c  tool.h
syntax/: fkl.vim
test/: atexit.fkl  bf.fkl  big-int.fkl  bigint.fkl  bigloop.fkl  buf.fkl  cir-ref.fkl  compile-check.fkl  complex-macro.fkl  coroutine.fkl  dvec-and-append.fkl  fib.fkl  fs.fkl  fuv.fkl  idle.fkl  inline-test.fkl  int.fkl  internationale.fkl  lex.fkl  lisp-by-lisp.fkl  main.fkl  make-test.fkl  mandelbrot-set.fkl  multiThread.fkl  parse.fkl  printf.fkl  read.fkl  reader-macro.fkl  remq.fkl  sort.fkl  stringify.fkl  sync.fkl  test-alias.fkl  test-except.fkl  test-ht.fkl  test-lex.fkl  test-lib.fkl  test-loc.fkl  test-m.fkl  test-only.fkl  (+4 more)
test/fuv/: _dns.fkl  _fs.fkl  _handle.fkl  _misc.fkl  _pipe-send.fkl  _pipe.fkl  _process.fkl  _signal.fkl  _tcp.fkl  _tty.fkl  _udp.fkl  main.fkl
tests/: atexit.fkl  bf.fkl  bigint.fkl  buf.fkl  compile-check.fkl  compiler-macro.fkl  complex-macro.fkl  demo1.fkl  dll.fkl  dvec-and-append.fkl  fib.fkl  fs.fkl  hello.fkl  idle.fkl  inline-test.fkl  internationale.fkl  lex.fkl  lisp-by-lisp.fkl  macro-context-lib.fkl  macro-context.fkl  macroexpand.fkl  main.fkl  make-test.fkl  mandelbrot-set.fkl  os.fkl  parse.fkl  printf.fkl  read.fkl  reader-macro.fkl  remq.fkl  sort.fkl  start-with-ignore.fkl  stringify.fkl  sync.fkl  test-alias.fkl  test-except.fkl  test-ht.fkl  test-lib.fkl  test-loc.fkl  test-only.fkl  (+3 more)
tests/fuv/: _dns.fkl  _fs.fkl  _handle.fkl  _misc.fkl  _pipe-read.fkl  _pipe-send.fkl  _pipe.fkl  _process.fkl  _signal.fkl  _tcp.fkl  _tty.fkl  _udp.fkl  main.fkl
